--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,8 +74,8 @@
         <activity
             android:name=".TabActivity"
             android:exported="false"
+            android:windowSoftInputMode="adjustPan|stateHidden"
             android:parentActivityName=".MainActivity">
-            <!-- Backward compatibility for pre-API 16 -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
